--- a/MqttBlazor/Server/MqttBlazor.Server.csproj
+++ b/MqttBlazor/Server/MqttBlazor.Server.csproj
@@ -1,21 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.3" />
-    <PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563" />
-    <PackageReference Include="MQTTnet.Extensions.Rpc" Version="4.1.4.563" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="InfluxDB.Client" Version="4.11.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.3" />
+		<PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563" />
+		<PackageReference Include="MQTTnet.Extensions.Rpc" Version="4.1.4.563" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Client\MqttBlazor.Client.csproj" />
-    <ProjectReference Include="..\Shared\MqttBlazor.Shared.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Client\MqttBlazor.Client.csproj" />
+		<ProjectReference Include="..\Shared\MqttBlazor.Shared.csproj" />
+	</ItemGroup>
 
 
 </Project>
