Add Settings .json

--- a/MqttBlazor/Server/appsettings.json
+++ b/MqttBlazor/Server/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "InfluxDbConfig": {
+    "Url": "http://localhost:8086",
+    "Token": "LEK-xrIL06ywC1brF0IeJq-G5nhEkBF7Wk7YrkkhS41Qw01G9BC4xVVOeymAMJoktA9jnyUw-WtnfMl9EOzXtg==",
+    "Bucket": "SobaTest",
+    "Org": "Smart Farm"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
